<resources>
    <string name="app_name">ToGoDutch</string>
    <string name="app_name_in_txt">To Go Dutch</string>

    <!-- Strings related to authentication -->
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">1589700857935790</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="forgot_password_txt">Forgot password?</string>
    <string name="sign_up_txt">New here? Sign up</string>
    <string name="username">Name</string>
    <string name="register_btn_txt">Register</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="logout">Logout</string>
    <string name="email_invalid">Not a valid email address</string>
    <string name="password_not_match">Password not match</string>
    <string name="password_empty">Password is Empty</string>
    <string name="reset_btn_txt">Send Password Reset Email</string>

    <!-- Strings related to statistic activity -->
    <string name="title_activity_main">Dashboard</string>
    <string name="dashboard_menu_item_text">Menu Text</string>

    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="option_menu_insert">Insert</string>
    <string name="option_menu_clear">CLear</string>
    <string name="option_menu_share">Share</string>
    <string name="option_menu_check_out">Check Out</string>
    <string name="option_menu_save">Save</string>
    <string name="insert_a_row">Add a member</string>
    <string name="insert_a_column">Add a purchase</string>
    <string name="action_settings">Settings</string>

    <string name="table_title_people">People</string>
    <string name="table_edit_hint_name">Name</string>
    <string name="table_edit_hint_purchase">purchase</string>
    <string name="table_edit_hint_payment">$</string>
    <string name="remove_entire_subject">Remove</string>

    <string name="dialog_OK">OK</string>
    <string name="dialog_Cancel">Cancel</string>

    <!-- Strings related to main activity -->
    <string-array name="nav_menu_array">
        <item>New</item>
        <item>History</item>
        <item>Unfinished Work</item>
        <item>Quick Average</item>
    </string-array>

    <string name="title_activity_dutch_history">DutchHistoryActivity</string>
    <string name="title_activity_unfinished_work">UnfinishedWorkActivity</string>
    <string name="title_activity_quick_average">QuickAverageActivity</string>
    <string name="title_activity_add_my_purchase">AddMyPurchaseActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_auth">AuthActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
