<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.longnightking.togodutch_android.ui.StatisticActivity">

    <item android:id="@+id/action_save" android:title="@string/option_menu_save"
        android:icon="@mipmap/ic_action_save"
        android:orderInCategory="3" android:showAsAction="always" />

    <item android:id="@+id/action_insert" android:title="@string/option_menu_insert"
        android:icon="@mipmap/ic_action_new"
        android:orderInCategory="1" android:showAsAction="always"/>

    <item android:id="@+id/action_clear" android:title="@string/option_menu_clear"
        android:icon="@mipmap/ic_action_discard"
        android:orderInCategory="2" android:showAsAction="always"/>

    <item android:id="@+id/action_check_out" android:title="@string/option_menu_check_out"
        android:icon="@mipmap/ic_action_accept"
        android:orderInCategory="4" android:showAsAction="always"/>
</menu>
