<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.longnightking.togodutch_android.ui.LoginActivity">

    <ScrollView android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_form_margin_vertical"
            android:layout_marginRight="@dimen/login_form_margin_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@mipmap/ic_launcher"/>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/email"
                    style="@style/AuthInfoEditStyle"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

                <EditText android:id="@+id/password"
                    style="@style/AuthInfoEditStyle"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />
                <!--android:imeActionId="@+id/login"-->

                <include
                    layout="@layout/widget_auth_operation_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_account_info_margin"/>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_login_text_view_margin">
                    <TextView
                        android:id="@+id/signUpTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_txt"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/forgotPasswordTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password_txt"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_login_text_view_margin"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/wechat_login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>



