<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.longnightking.togodutch_android.ui.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_form_margin_vertical"
            android:layout_marginRight="@dimen/login_form_margin_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/email"
                    style="@style/AuthInfoEditStyle"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />


                <EditText android:id="@+id/password"
                    style="@style/AuthInfoEditStyle"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />

                <EditText android:id="@+id/password_repeat"
                    style="@style/AuthInfoEditStyle"
                    android:hint="@string/password_repeat"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword" />

                <include
                    layout="@layout/widget_auth_operation_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_account_info_margin"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>